k8s/radarr/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: radarr
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: radarr
          image: ghcr.io/linuxserver/radarr
          ports:
            - name: radarr
              containerPort: 7878
          volumeMounts:
            - name: server
              mountPath: /config
              subPath: radarr
            - name: data
              mountPath: /movies
              subPath: plex/Movies
            - name: data
              mountPath: /data
              subPath: transmission
          resources:
            limits:
              memory: 512Mi
            requests:
              memory: 256Mi
      volumes:
        - name: server
          persistentVolumeClaim:
            claimName: server
        - name: data
          persistentVolumeClaim:
            claimName: data
