k8s/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
spec:
  type: ClusterIP
  ports:
    - name: radarr
      port: 7878
      targetPort: radarr
